--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <div id="particles">
     <div id="intro">
-        <h2 style="font-family: 'Roboto', sans-serif; font-weight: 12;">Hello, my name is Santiago Guzman and  i'm passion driven Software Engineer&nbsp<a></a></h2>
+        <h2 style="font-family: 'Roboto', sans-serif; font-weight: 12;">Santiago Guzman&nbsp<a></a></h2>
+        <h2 style="font-family: 'Roboto', sans-serif; font-weight: 12;">A Passion Driven Software Engineer&nbsp<a></a></h2>
             <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
         <a href="https://www.linkedin.com/in/santiagoguzman0321" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
         &nbsp
