--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         &nbsp
         <a href="https://github.com/Crypto789" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
         &nbsp
-        <a href="SWE_Resume.pdf" style="color: white;"><i class="fas fa-file-pdf" style="font-size:2em"></i></a>
+        <a href="Resume.pdf" style="color: white;"><i class="fas fa-file-pdf" style="font-size:2em"></i></a>
     </div>
 </div>
 
